add three entities with ts relation repo service and controller added to contract and edited tests and more
